[package]
name = "rustquizbot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
log = "0.4.22"
pretty_env_logger = "0.5.0"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "uuid"] }
teloxide = { version = "0.13.0", features = ["axum", "macros", "webhooks", "webhooks-axum"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["json", "std"] }
url = "2.5.2"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
